--- a/notebooks/Day1_Basics.ipynb
+++ b/notebooks/Day1_Basics.ipynb
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 296,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -1569,6 +1569,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>a</th>\n",
        "      <th>b</th>\n",
        "      <th>c</th>\n",
        "      <th>d</th>\n",
@@ -1577,49 +1578,71 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>horse</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>CAT</td>\n",
+       "      <td>cat</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>RABBIT</td>\n",
-       "      <td>9.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>HORSE</td>\n",
-       "      <td>13.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>tortoise</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>rabbit</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   b    c       d     e\n",
-       "1  1  1.4     CAT  11.0\n",
-       "4  2  2.3  RABBIT   9.0\n",
-       "0  3  5.0   HORSE  13.0"
+       "   a   b    c         d     e\n",
+       "0  2   3  5.0     horse  13.0\n",
+       "1  3   1  1.4       cat  11.0\n",
+       "2  4   9  1.2       dog   NaN\n",
+       "3  5  12  0.8  tortoise   NaN\n",
+       "4  6   2  2.3    rabbit   9.0"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df3 = pd.read_csv('../example_data/example_df2.csv',sep=';')\n",
     "df3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 285,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -1707,7 +1730,7 @@
        "6     fish  0.8      carp   NaN"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,51 +1748,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dfmerge = pd.merge(df3,df4,on=['c','d','e'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b_x</th>\n",
+       "      <th>c</th>\n",
+       "      <th>d</th>\n",
+       "      <th>e</th>\n",
+       "      <th>b_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>horse</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>mammal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>mammal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>mammal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b_x    c      d     e     b_y\n",
+       "0  2    3  5.0  horse  13.0  mammal\n",
+       "1  3    1  1.4    cat  11.0  mammal\n",
+       "2  4    9  1.2    dog   NaN  mammal"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfmerge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "collapsed": false,
     "run_control": {
      "frozen": false,
      "read_only": false
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dfmerge2 = pd.merge(df3,df4,on=['c','d','e'],how='outer')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 306,
    "metadata": {
-    "collapsed": true,
-    "run_control": {
-     "frozen": false,
-     "read_only": false
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b_x</th>\n",
+       "      <th>c</th>\n",
+       "      <th>d</th>\n",
+       "      <th>e</th>\n",
+       "      <th>b_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>horse</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>mammal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>mammal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>mammal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>tortoise</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>rabbit</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>goldfish</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>snake</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>reptile</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>koi</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>fish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>carp</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fish</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     a   b_x    c         d     e      b_y\n",
+       "0  2.0   3.0  5.0     horse  13.0   mammal\n",
+       "1  3.0   1.0  1.4       cat  11.0   mammal\n",
+       "2  4.0   9.0  1.2       dog   NaN   mammal\n",
+       "3  5.0  12.0  0.8  tortoise   NaN      NaN\n",
+       "4  6.0   2.0  2.3    rabbit   9.0      NaN\n",
+       "5  NaN   NaN  0.1  goldfish   NaN     fish\n",
+       "6  NaN   NaN  2.3     snake   9.0  reptile\n",
+       "7  NaN   NaN  1.8       koi  10.0     fish\n",
+       "8  NaN   NaN  0.8      carp   NaN     fish"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "dfmerge2"
+   ]
   },
   {
    "cell_type": "code",
@@ -1793,7 +2004,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### \n",
     "\n"
    ]
   }
