added comments to manhattan plot

--- a/notebooks/Day3_GWAS_part1.ipynb
+++ b/notebooks/Day3_GWAS_part1.ipynb
@@ -2334,17 +2334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 512,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'neglog_pvalues' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-512-2531df994ae9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmanhattan\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mneglog_pvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchrPos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmanhattan\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'-log10(pvalue)'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'cM'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmanhattan\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Chr\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenotype\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Chr'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmanhattan\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Mb\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenotype\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Mb'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmanhattan\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Chr'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#also sort by chromosome position, try to plot all chromosomes\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'neglog_pvalues' is not defined"
+     ]
+    }
+   ],
    "source": [
     "manhattan = neglog_pvalues.join(chrPos)\n",
     "manhattan.columns = ['-log10(pvalue)','cM']\n",
     "manhattan[\"Chr\"] = genotype['Chr']\n",
     "manhattan[\"Mb\"] = genotype['Mb']\n",
-    "mh = manhattan.sort_values('Chr')\n",
+    "mh = manhattan.sort_values('Chr') #also sort by chromosome position, try to plot all chromosomes\n",
     "mh.head()\n",
     "mh_grouped = mh.groupby(['Chr'],sort=False)"
    ]
@@ -4115,6 +4127,7 @@
     }
    ],
    "source": [
+    "\n",
     "mh['ind'] = range(len(mh))\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
