finished volcano plot

--- a/notebooks/DayY_Pathways.ipynb
+++ b/notebooks/DayY_Pathways.ipynb
@@ -26,13 +26,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.67'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import Bio\n",
+    "Bio.__version__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from Bio import SeqIO\n",
+    "from Bio.KEGG.REST import *\n",
+    "from Bio.KEGG.KGML import KGML_parser\n",
+    "from Bio.Graphics.KGML_vis import KGMLCanvas\n",
+    "from Bio.Graphics.ColorSpiral import ColorSpiral\n",
+    "from IPython.display import Image, HTML\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import statsmodels.api as sm\n",
+    "import scipy.stats as sp\n",
+    "# A bit of code that will help us display the PDF output\n",
+    "def PDF(filename):\n",
+    "    return HTML('<iframe src=%s width=700 height=350></iframe>' % filename)\n",
+    "\n",
+    "# A bit of helper code to shorten long text\n",
+    "def head(text, lines=10):\n",
+    "    \"\"\" Print the first lines lines of the passed text.\n",
+    "    \"\"\"\n",
+    "    print '\\n'.join(text.split('\\n')[:lines] + ['[...]'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "genes = kegg_list('mmu').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'m'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genes[0]"
+   ]
   },
   {
    "cell_type": "markdown",
