--- a/notebooks/Interactive Visualization.ipynb
+++ b/notebooks/Interactive Visualization.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,74 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: An unexpected error occurred while tokenizing input\n",
-      "The following traceback may be corrupted or invalid\n",
-      "The error message is: ('EOF in multi-line string', (1, 11))\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-75-c6556b3ba378>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m Javascript(\"\"\"\n\u001b[0;32m      4\u001b[0m            \u001b[0mwindow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvizObj\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m            \"\"\".format(df.to_json()))\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from IPython.display import Javascript\n",
-    "#runs arbitrary javascript, client-side\n",
-    "Javascript(\"\"\"\n",
-    "           window.vizObj={};\n",
-    "           \"\"\".format(df.to_json()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "require(['d3'], function(d3){\n",
-       "    d3.version();\n",
-       "}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "require(['d3'], function(d3){\n",
-    "    d3.version();\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +230,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -330,7 +263,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -447,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -485,9 +418,6 @@
     "%%javascript\n",
     "require(['d3'], function(d3){\n",
     "function convertPlotData(data){\n",
-    "  var convertedData = [];\n",
-    "  //pandas gives each column the same number of\n",
-    "  //objects, arbitrarily choose one to iterate over\n",
     "  for(var i in data[Object.keys(data)[0]]){\n",
     "    var convertedDatum = {};\n",
     "    for(var key in data){\n",
@@ -520,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -531,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -593,7 +523,7 @@
        "4  D630002G06Rik      14.160802         -0.304928"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -615,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -626,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -637,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -653,7 +583,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 478,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +619,7 @@
        "<IPython.core.display.Javascript object>"
       ]
      },
-     "execution_count": 511,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -783,7 +713,15 @@
        "      .attr(\"dy\", \"1em\")\n",
        "      .style(\"text-anchor\", \"end\")\n",
        "      .text(\"-log10 p value\");\n",
-       "\n",
+       "    \n",
+       "   svg.append('line')\n",
+       "        .attr(\"x1\",0)\n",
+       "        .attr(\"x2\",width-80)\n",
+       "        .attr(\"y1\",100)\n",
+       "        .attr(\"y2\",100)\n",
+       "        .attr(\"stroke-width\", 2)\n",
+       "        .attr(\"stroke\", \"black\");\n",
+       "    \n",
        "    \n",
        "    \n",
        "  //NEW: TOOLTIP. \n",
@@ -895,7 +833,29 @@
     "      .style(\"text-anchor\", \"end\")\n",
     "      .text(\"-log10 p value\");\n",
     "    \n",
-    "    var leftLine = d3.select('body').append(\"line\")\n",
+    "   svg.append('line')\n",
+    "        .attr(\"x1\",0)\n",
+    "        .attr(\"x2\",width-80)\n",
+    "        .attr(\"y1\",100)\n",
+    "        .attr(\"y2\",100)\n",
+    "        .attr(\"stroke-width\", 2)\n",
+    "        .attr(\"stroke\", \"black\");\n",
+    "    \n",
+    "       svg.append('line')\n",
+    "        .attr(\"x1\",0)\n",
+    "        .attr(\"x2\",width-80)\n",
+    "        .attr(\"y1\",100)\n",
+    "        .attr(\"y2\",100)\n",
+    "        .attr(\"stroke-width\", 2)\n",
+    "        .attr(\"stroke\", \"black\");\n",
+    "    \n",
+    "       svg.append('line')\n",
+    "        .attr(\"x1\",0)\n",
+    "        .attr(\"x2\",width-80)\n",
+    "        .attr(\"y1\",100)\n",
+    "        .attr(\"y2\",100)\n",
+    "        .attr(\"stroke-width\", 2)\n",
+    "        .attr(\"stroke\", \"black\");\n",
     "    \n",
     "    \n",
     "    \n",
