--- a/notebooks/Interactive Visualization.ipynb
+++ b/notebooks/Interactive Visualization.ipynb
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -648,6 +648,8 @@
       "application/javascript": [
        "require(['d3'], function(d3){\n",
        "\n",
+       "    \n",
+       "    \n",
        "  //a weird idempotency thing\n",
        "  $(\"#chart3\").remove();\n",
        "  //create canvas\n",
@@ -657,14 +659,88 @@
        "  var margin = {top: 20, right: 20, bottom: 30, left: 40};\n",
        "  var width = 800 - margin.left - margin.right;\n",
        "  var height = 600 - margin.top - margin.bottom;\n",
-       "  var svg = d3.select(\"#chart3\").append(\"svg\")\n",
+       "  window.svg = d3.select(\"#chart3\").append(\"svg\")\n",
        "    .style(\"position\", \"relative\")\n",
        "    .style(\"max-width\", \"800\")\n",
        "    .attr(\"width\", width + \"px\")\n",
        "    .attr(\"height\", (height + 50) + \"px\")\n",
        "    .append(\"g\")\n",
        "    .attr(\"transform\", \"translate(\" + margin.left + \",\" + margin.top + \")\");\n",
+       "   \n",
+       "      \n",
        "  \n",
+       " function drawDots(yPos) {\n",
+       "     console.log(\"Ausgeführt\")\n",
+       "     console.log(window.yPos)\n",
+       "  window.svg.selectAll(\".dot\")\n",
+       "     .data(data)\n",
+       "     .enter().append(\"circle\")\n",
+       "     .attr(\"class\", \"dot\")\n",
+       "     .attr(\"r\", 1.5)\n",
+       "     .attr(\"cx\", xMap)\n",
+       "     .attr(\"cy\", yMap)\n",
+       "     .style(\"fill\", function(d){\n",
+       "      if (d[\"-log_p_values\"] < yScale.invert(yPos)) {\n",
+       "          return \"orange\"\n",
+       "          \n",
+       "      }\n",
+       "  }) //D3 does the magic! \n",
+       "     .on(\"mouseover\", function(d) { //much like jquery,-log10 p value an event listener\n",
+       "         tooltip.transition()\n",
+       "                .duration(50)\n",
+       "                .style(\"opacity\", .9);\n",
+       "         tooltip.html(d[\"Gene\"])\n",
+       "               .style(\"left\", (d3.event.pageX + 5) + \"px\")\n",
+       "               .style(\"top\", (d3.event.pageY - 28) + \"px\");\n",
+       "      })\n",
+       "      .on(\"mouseout\", function(d) {\n",
+       "          tooltip.transition()\n",
+       "               .duration(500)\n",
+       "               .style(\"opacity\", 0);\n",
+       "      });\n",
+       "    }\n",
+       "    \n",
+       "    \n",
+       "    var dragVert = d3.behavior.drag()\n",
+       "                .on(\"drag\",function()\n",
+       "                   {\n",
+       "                    d3.select(this).attr(\"x1\",d3.event.x)\n",
+       "                        .attr(\"x2\", d3.event.x)\n",
+       "                  window.xPos = d3.event.x\n",
+       "                   window.svg.selectAll(\".dot\")\n",
+       "                .style(\"fill\", function(d){\n",
+       "      if (d.log2_fold_change > xScale.invert(xPos)) {\n",
+       "          return \"orange\"\n",
+       "          \n",
+       "      }\n",
+       "                     else return \"blue\"})\n",
+       "                    \n",
+       "                }\n",
+       "             \n",
+       "                )\n",
+       "                \n",
+       "      var dragHor = d3.behavior.drag()\n",
+       "                .on(\"drag\",function()\n",
+       "                   {\n",
+       "                     d3.select(this).attr(\"y1\",d3.event.y)\n",
+       "                        .attr(\"y2\",d3.event.y)\n",
+       "                     window.yPos = d3.event.y\n",
+       "                     console.log(yPos)\n",
+       "                     window.svg.selectAll(\".dot\")\n",
+       "                     .style(\"fill\", function(d){\n",
+       "      if (d[\"-log_p_values\"] < yScale.invert(yPos)) {\n",
+       "          return \"orange\"\n",
+       "          \n",
+       "      }\n",
+       "                     else return \"blue\"})\n",
+       "                    \n",
+       "                }\n",
+       "                   )\n",
+       "             \n",
+       "                  \n",
+       "                \n",
+       "    \n",
+       "    \n",
        "  //set data\n",
        "  var data = window.convertPlotData(window.volcano);\n",
        "  var xVals = function(d){return d.log2_fold_change};\n",
@@ -682,7 +758,7 @@
        "\n",
        "  \n",
        "    var cValue = function(d) { \n",
-       "    if(d[\"-log_p_value\"] < 0 ){\n",
+       "    if(d[\"-log_p_values\"] < 0 ){\n",
        "        return \"red\";\n",
        "    }\n",
        "        else{\n",
@@ -691,7 +767,7 @@
        "  }\n",
        "  \n",
        "  // x-axis\n",
-       "  svg.append(\"g\")\n",
+       "  window.svg.append(\"g\")\n",
        "      .attr(\"class\", \"x axis\")\n",
        "      .attr(\"transform\", \"translate(0,\" + height + \")\")\n",
        "      .call(xAxis)\n",
@@ -703,7 +779,7 @@
        "      .text(\"log2 fold change\");\n",
        "\n",
        "  // y-axis\n",
-       "  svg.append(\"g\")\n",
+       "  window.svg.append(\"g\")\n",
        "      .attr(\"class\", \"y axis\")\n",
        "      .call(yAxis)\n",
        "    .append(\"text\")\n",
@@ -713,46 +789,45 @@
        "      .attr(\"dy\", \"1em\")\n",
        "      .style(\"text-anchor\", \"end\")\n",
        "      .text(\"-log10 p value\");\n",
+       "\n",
        "    \n",
-       "   svg.append('line')\n",
-       "        .attr(\"x1\",0)\n",
-       "        .attr(\"x2\",width-80)\n",
-       "        .attr(\"y1\",100)\n",
-       "        .attr(\"y2\",100)\n",
-       "        .attr(\"stroke-width\", 2)\n",
-       "        .attr(\"stroke\", \"black\");\n",
+       " var horLines = [{x1:0,x2:width-80,y1:100,y2:100}];\n",
+       "      \n",
+       "                   \n",
+       " var vertLines = [{x1:450,x2:450,y1:height,y2:0},\n",
+       "    {x1:300,x2:300,y1:height,y2:0}];\n",
+       "   \n",
+       "\n",
+       " var lines = window.svg.selectAll(\".test\").data(horLines).enter().append(\"line\")\n",
+       "    .attr(\"x1\",function(d) {return d.x1})\n",
+       "    .attr(\"x2\",function(d) {return d.x2})\n",
+       "    .attr(\"y1\",function(d) {return d.y1})\n",
+       "    .attr(\"y2\",function(d) {return d.y2})\n",
+       "    .attr(\"stroke-width\", 2)\n",
+       "    .attr(\"stroke\", \"black\")\n",
+       "     .call(dragHor,drawDots);\n",
        "    \n",
+       "     var lines = window.svg.selectAll(\".test\").data(vertLines).enter().append(\"line\")\n",
+       "    .attr(\"x1\",function(d) {return d.x1})\n",
+       "    .attr(\"x2\",function(d) {return d.x2})\n",
+       "    .attr(\"y1\",function(d) {return d.y1})\n",
+       "    .attr(\"y2\",function(d) {return d.y2})\n",
+       "    .attr(\"stroke-width\", 2)\n",
+       "    .attr(\"stroke\", \"black\")\n",
+       "     .call(dragVert);\n",
        "    \n",
+       "  console.log(lines)\n",
        "    \n",
        "  //NEW: TOOLTIP. \n",
        "  var tooltip = d3.select(\"body\").append(\"div\")\n",
        "    .attr(\"class\", \"tooltip\")\n",
        "    .style(\"opacity\", 0)\n",
        "    .style(\"background-color\", \"white\");\n",
-       " \n",
-       "  svg.selectAll(\".dot\")\n",
-       "     .data(data)\n",
-       "     .enter().append(\"circle\")\n",
-       "     .attr(\"class\", \"dot\")\n",
-       "     .attr(\"r\", 2.5)\n",
-       "     .attr(\"cx\", xMap)\n",
-       "     .attr(\"cy\", yMap)\n",
-       "     .style(\"fill\", \"orange\") //D3 does the magic! \n",
-       "     .on(\"mouseover\", function(d) { //much like jquery, an event listener\n",
-       "         tooltip.transition()\n",
-       "                .duration(50)\n",
-       "                .style(\"opacity\", .9);\n",
-       "         tooltip.html(d[\"Gene\"])\n",
-       "               .style(\"left\", (d3.event.pageX + 5) + \"px\")\n",
-       "               .style(\"top\", (d3.event.pageY - 28) + \"px\");\n",
-       "      })\n",
-       "      .on(\"mouseout\", function(d) {\n",
-       "          tooltip.transition()\n",
-       "               .duration(500)\n",
-       "               .style(\"opacity\", 0);\n",
-       "      });\n",
+       "  \n",
        "    \n",
-       " \n",
+       "    \n",
+       " drawDots(100)\n",
+       "    console.log(yScale.invert(200))\n",
        "});"
       ],
       "text/plain": [
@@ -767,6 +842,8 @@
     "%%javascript\n",
     "require(['d3'], function(d3){\n",
     "\n",
+    "    \n",
+    "    \n",
     "  //a weird idempotency thing\n",
     "  $(\"#chart3\").remove();\n",
     "  //create canvas\n",
@@ -776,14 +853,88 @@
     "  var margin = {top: 20, right: 20, bottom: 30, left: 40};\n",
     "  var width = 800 - margin.left - margin.right;\n",
     "  var height = 600 - margin.top - margin.bottom;\n",
-    "  var svg = d3.select(\"#chart3\").append(\"svg\")\n",
+    "  window.svg = d3.select(\"#chart3\").append(\"svg\")\n",
     "    .style(\"position\", \"relative\")\n",
     "    .style(\"max-width\", \"800\")\n",
     "    .attr(\"width\", width + \"px\")\n",
     "    .attr(\"height\", (height + 50) + \"px\")\n",
     "    .append(\"g\")\n",
     "    .attr(\"transform\", \"translate(\" + margin.left + \",\" + margin.top + \")\");\n",
+    "   \n",
+    "      \n",
     "  \n",
+    " function drawDots(yPos) {\n",
+    "     console.log(\"Ausgeführt\")\n",
+    "     console.log(window.yPos)\n",
+    "  window.svg.selectAll(\".dot\")\n",
+    "     .data(data)\n",
+    "     .enter().append(\"circle\")\n",
+    "     .attr(\"class\", \"dot\")\n",
+    "     .attr(\"r\", 1.5)\n",
+    "     .attr(\"cx\", xMap)\n",
+    "     .attr(\"cy\", yMap)\n",
+    "     .style(\"fill\", function(d){\n",
+    "      if (d[\"-log_p_values\"] < yScale.invert(yPos)) {\n",
+    "          return \"orange\"\n",
+    "          \n",
+    "      }\n",
+    "  }) //D3 does the magic! \n",
+    "     .on(\"mouseover\", function(d) { //much like jquery,-log10 p value an event listener\n",
+    "         tooltip.transition()\n",
+    "                .duration(50)\n",
+    "                .style(\"opacity\", .9);\n",
+    "         tooltip.html(d[\"Gene\"])\n",
+    "               .style(\"left\", (d3.event.pageX + 5) + \"px\")\n",
+    "               .style(\"top\", (d3.event.pageY - 28) + \"px\");\n",
+    "      })\n",
+    "      .on(\"mouseout\", function(d) {\n",
+    "          tooltip.transition()\n",
+    "               .duration(500)\n",
+    "               .style(\"opacity\", 0);\n",
+    "      });\n",
+    "    }\n",
+    "    \n",
+    "    \n",
+    "    var dragVert = d3.behavior.drag()\n",
+    "                .on(\"drag\",function()\n",
+    "                   {\n",
+    "                    d3.select(this).attr(\"x1\",d3.event.x)\n",
+    "                        .attr(\"x2\", d3.event.x)\n",
+    "                  window.xPos = d3.event.x\n",
+    "                   window.svg.selectAll(\".dot\")\n",
+    "                .style(\"fill\", function(d){\n",
+    "      if (d.log2_fold_change > xScale.invert(xPos)) {\n",
+    "          return \"orange\"\n",
+    "          \n",
+    "      }\n",
+    "                     else return \"blue\"})\n",
+    "                    \n",
+    "                }\n",
+    "             \n",
+    "                )\n",
+    "                \n",
+    "      var dragHor = d3.behavior.drag()\n",
+    "                .on(\"drag\",function()\n",
+    "                   {\n",
+    "                     d3.select(this).attr(\"y1\",d3.event.y)\n",
+    "                        .attr(\"y2\",d3.event.y)\n",
+    "                     window.yPos = d3.event.y\n",
+    "                     console.log(yPos)\n",
+    "                     window.svg.selectAll(\".dot\")\n",
+    "                     .style(\"fill\", function(d){\n",
+    "      if (d[\"-log_p_values\"] < yScale.invert(yPos)) {\n",
+    "          return \"orange\"\n",
+    "          \n",
+    "      }\n",
+    "                     else return \"blue\"})\n",
+    "                    \n",
+    "                }\n",
+    "                   )\n",
+    "             \n",
+    "                  \n",
+    "                \n",
+    "    \n",
+    "    \n",
     "  //set data\n",
     "  var data = window.convertPlotData(window.volcano);\n",
     "  var xVals = function(d){return d.log2_fold_change};\n",
@@ -801,7 +952,7 @@
     "\n",
     "  \n",
     "    var cValue = function(d) { \n",
-    "    if(d[\"-log_p_value\"] < 0 ){\n",
+    "    if(d[\"-log_p_values\"] < 0 ){\n",
     "        return \"red\";\n",
     "    }\n",
     "        else{\n",
@@ -810,7 +961,7 @@
     "  }\n",
     "  \n",
     "  // x-axis\n",
-    "  svg.append(\"g\")\n",
+    "  window.svg.append(\"g\")\n",
     "      .attr(\"class\", \"x axis\")\n",
     "      .attr(\"transform\", \"translate(0,\" + height + \")\")\n",
     "      .call(xAxis)\n",
@@ -822,7 +973,7 @@
     "      .text(\"log2 fold change\");\n",
     "\n",
     "  // y-axis\n",
-    "  svg.append(\"g\")\n",
+    "  window.svg.append(\"g\")\n",
     "      .attr(\"class\", \"y axis\")\n",
     "      .call(yAxis)\n",
     "    .append(\"text\")\n",
@@ -832,62 +983,45 @@
     "      .attr(\"dy\", \"1em\")\n",
     "      .style(\"text-anchor\", \"end\")\n",
     "      .text(\"-log10 p value\");\n",
+    "\n",
     "    \n",
-    "   svg.append('line')\n",
-    "        .attr(\"x1\",0)\n",
-    "        .attr(\"x2\",width-80)\n",
-    "        .attr(\"y1\",100)\n",
-    "        .attr(\"y2\",100)\n",
-    "        .attr(\"stroke-width\", 2)\n",
-    "        .attr(\"stroke\", \"black\");\n",
+    " var horLines = [{x1:0,x2:width-80,y1:100,y2:100}];\n",
+    "      \n",
+    "                   \n",
+    " var vertLines = [{x1:450,x2:450,y1:height,y2:0},\n",
+    "    {x1:300,x2:300,y1:height,y2:0}];\n",
+    "   \n",
+    "\n",
+    " var lines = window.svg.selectAll(\".test\").data(horLines).enter().append(\"line\")\n",
+    "    .attr(\"x1\",function(d) {return d.x1})\n",
+    "    .attr(\"x2\",function(d) {return d.x2})\n",
+    "    .attr(\"y1\",function(d) {return d.y1})\n",
+    "    .attr(\"y2\",function(d) {return d.y2})\n",
+    "    .attr(\"stroke-width\", 2)\n",
+    "    .attr(\"stroke\", \"black\")\n",
+    "     .call(dragHor,drawDots);\n",
     "    \n",
-    "       svg.append('line')\n",
-    "        .attr(\"x1\",0)\n",
-    "        .attr(\"x2\",width-80)\n",
-    "        .attr(\"y1\",100)\n",
-    "        .attr(\"y2\",100)\n",
-    "        .attr(\"stroke-width\", 2)\n",
-    "        .attr(\"stroke\", \"black\");\n",
+    "     var lines = window.svg.selectAll(\".test\").data(vertLines).enter().append(\"line\")\n",
+    "    .attr(\"x1\",function(d) {return d.x1})\n",
+    "    .attr(\"x2\",function(d) {return d.x2})\n",
+    "    .attr(\"y1\",function(d) {return d.y1})\n",
+    "    .attr(\"y2\",function(d) {return d.y2})\n",
+    "    .attr(\"stroke-width\", 2)\n",
+    "    .attr(\"stroke\", \"black\")\n",
+    "     .call(dragVert);\n",
     "    \n",
-    "       svg.append('line')\n",
-    "        .attr(\"x1\",0)\n",
-    "        .attr(\"x2\",width-80)\n",
-    "        .attr(\"y1\",100)\n",
-    "        .attr(\"y2\",100)\n",
-    "        .attr(\"stroke-width\", 2)\n",
-    "        .attr(\"stroke\", \"black\");\n",
-    "    \n",
-    "    \n",
+    "  console.log(lines)\n",
     "    \n",
     "  //NEW: TOOLTIP. \n",
     "  var tooltip = d3.select(\"body\").append(\"div\")\n",
     "    .attr(\"class\", \"tooltip\")\n",
     "    .style(\"opacity\", 0)\n",
     "    .style(\"background-color\", \"white\");\n",
-    " \n",
-    "  svg.selectAll(\".dot\")\n",
-    "     .data(data)\n",
-    "     .enter().append(\"circle\")\n",
-    "     .attr(\"class\", \"dot\")\n",
-    "     .attr(\"r\", 2.5)\n",
-    "     .attr(\"cx\", xMap)\n",
-    "     .attr(\"cy\", yMap)\n",
-    "     .style(\"fill\", \"orange\") //D3 does the magic! \n",
-    "     .on(\"mouseover\", function(d) { //much like jquery, an event listener\n",
-    "         tooltip.transition()\n",
-    "                .duration(50)\n",
-    "                .style(\"opacity\", .9);\n",
-    "         tooltip.html(d[\"Gene\"])\n",
-    "               .style(\"left\", (d3.event.pageX + 5) + \"px\")\n",
-    "               .style(\"top\", (d3.event.pageY - 28) + \"px\");\n",
-    "      })\n",
-    "      .on(\"mouseout\", function(d) {\n",
-    "          tooltip.transition()\n",
-    "               .duration(500)\n",
-    "               .style(\"opacity\", 0);\n",
-    "      });\n",
+    "  \n",
     "    \n",
-    " \n",
+    "    \n",
+    " drawDots(100)\n",
+    "    console.log(yScale.invert(200))\n",
     "});"
    ]
   },
