partly cleaned up exploratory analysis notebook

--- a/notebooks/Day1_Basics.ipynb
+++ b/notebooks/Day1_Basics.ipynb
@@ -72,6 +72,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a series of floats"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -162,6 +169,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a data frame using the pandas data frame constructor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
@@ -179,13 +193,6 @@
     "                  'd':[\"horse\",\"cat\",\"dog\",\"tortoise\",\"rabbit\"],\n",
     "                  'e': [13,11,np.nan,np.nan,9]},\n",
     "                 index= [1,2,3,4,5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create the data frame with pd.DataFrame() function."
    ]
   },
   {
@@ -1547,7 +1554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Merge df3 with df4 on columns c, d and e. Change columns with same names in a meaningful way."
+    "Merge df3 with df4 on columns c, d and e. Change columns with same names in a meaningful way."
    ]
   },
   {
@@ -1983,24 +1990,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2018,14 +2007,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   },
   "toc": {
    "toc_cell": true,
